cluster/apps/networking/traefik/external/iot/nodepi0/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nodepi0
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.47
    ports:
      - name: default
        port: 1880
        protocol: TCP
