cluster/apps/networking/traefik/external/iot/nodepi0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: resistor-nodes
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: nodepi0
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_NODEPI0_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nodepi0
                port:
                  number: 1880
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_NODEPI0_DOMAIN}"
      secretName: nodepi0
